<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryLightDemo"
    android:gravity="center"
    android:orientation="vertical">
    
    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/ic_baseline_signal_wifi_off_24"
        android:layout_gravity="center"
        app:tint="@color/colorAccentDemo"
        android:contentDescription="@string/todo" />
    
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/oops"
        android:textStyle="bold"
        android:textSize="40sp"
        android:gravity="center"
        android:textColor="@color/colorAccentDemo"/>
    
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/colorAccentDemo"
        android:textSize="25sp"
        android:text="@string/no_tienes_conexion_a_internet"
        android:gravity="center"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/colorAccentDemo"
        android:textSize="18sp"
        android:text="@string/porfavor_checa_tu_conexion_a_internet"
        android:gravity="center"/>
    
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnRetry"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="50dp"
        android:textAllCaps="true"
        android:background="@drawable/button_shape"
        android:textColor="@color/colorOnPrimaryDemo"
        android:text="@string/reintentar"/>

</LinearLayout>